Added bootsetup C bindings, ready to begin C second stage bootloader

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # ignore any executable binaries
 *.exe
+
+# ignore .vscode
+.vscode
+
+# Ignore Watcom Error files
+*.err
+
+# Ignore ini files
+*.ini
